fixtures/errors/for_await_outside_async.js
function foo() { for await (let x of []) {} }
